--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,22 @@
 [build]
   publish = "."
 
+# Enforce one canonical domain (no-www version)
 [[redirects]]
-  from = "/index"
-  to = "/"
+  from = "https://www.staffona.com/*"
+  to   = "https://staffona.com/:splat"
   status = 301
+  force  = true
 
-[[redirects]]
-  from = "/home"
-  to = "/"
-  status = 301
-
+# Security headers
 [[headers]]
   for = "/*"
   [headers.values]
-    X-Frame-Options = "SAMEORIGIN"
+    X-Frame-Options        = "SAMEORIGIN"
     X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
+    Referrer-Policy        = "strict-origin-when-cross-origin"
 
+# Cache static assets
 [[headers]]
   for = "*.css"
   [headers.values]
@@ -29,8 +28,6 @@
     Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
-  for = "*.html"
+  for = "*.png"
   [headers.values]
-    Cache-Control = "public, max-age=3600"
-
-
+    Cache-Control = "public, max-age=31536000, immutable"
